# upy-application

./: .env-default  .gitignore  404.html  Procfile  README.md  auth_group_permissions.json  buildspec.yml  index.html  install_dev.txt  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script_checkout_branch.py  script_commit_branch.py  script_create_branch.py  script_delete_branch.py  script_merge_branch.py  setup.py  sitemap.xml
.docker/: Dockerfile.local
.ebextensions/: deploy.config  django.config
.github/: python-app-test.yml
.github/workflows/: python-app-code.yml  python-app-test.yml  python-app-unittest.yml  python-upy-test.yml  python-upy.yml
accounts/migrations/: 0001_initial.py
app/: apps.py  base.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
app/conf/: development.py  production.py
app/fixtures/: auth_group.json  auth_group_permissions.json  auth_permission.json  auth_user.json  auth_user_groups.json  base_application.json  base_category.json  base_configuration.json  base_currency.json  base_payment_type.json  base_plan.json  company_data.json  company_relationship.json
app/settings/: development.py  production.py  unittest.py
docs/: index.md
docs/nav/: installation.md  screenshot.md
modules/: utils.py
modules/account/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
search/: search_index.json
tests/: conftest.py  settings.py  test_models.py
upy_application/: __init__.py  settings.py  urls.py  wsgi.py
(+308 files in other folders)
