[tool.poetry]
name = "upy-application"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0"
dj-database-url = "2.1.0"
django-bootstrap-modal-forms = "3.0.4"
django-bootstrap4 = "23.4"
django-crispy-forms = "2.1"
django-global-permissions = "0.2.6"
django-pipeline = "3.0.0"
django-widget-tweaks = "1.5.0"
python-dotenv = "1.0.1"
gunicorn = "21.2.0"
pymysql = "1.1.0"
whitenoise = "6.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
